# rust-sliding_windows

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html
src/: benches.rs  lib.rs  sliding_windows.rs  tests.rs
