[package]
name = "sliding_windows"
description = "a non-copying implementation of a sliding windows iterator adaptor"
version = "2.0.3"
authors = ["flo-l <lacknerflo@gmail.com>"]
license = "MIT"
homepage = "https://flo-l.github.io/rust-sliding_windows/"
documentation = "https://flo-l.github.io/rust-sliding_windows/"
repository = "https://github.com/flo-l/rust-sliding_windows/"
