[package]
name = "sliding_windows"
description = "a non-copying implementation of a sliding windows iterator adaptor"
version = "3.0.0"
authors = ["flo-l <lacknerflo@gmail.com>"]
license = "MIT"
homepage = "https://docs.rs/sliding_windows/"
documentation = "https://docs.rs/sliding_windows/"
repository = "https://github.com/flo-l/rust-sliding_windows/"
